classDiagram
    class OrderItem {
        + int orderId
        + decimal preparationTime
        + String itemName
        + int quantity
        + DateTime orderDate
    }

    class OrderQueue {
        + Queue~OrderItem~ orders
        + void addOrder(OrderItem order)
        + Order getNextOrder()
        + int getOrderCount()
    }

    class RestaurantQueueManager {
        - Map~String, OrderQueue[]~ restaurantQueues
        + void addOrder(String kitchen, OrderItem order)
        + Order getNextOrder(String kitchen)
        + int getOrderCount(String kitchen)
        + void removeOrder(String kitchen, int orderId)
        + List~Order~ getOrders(String kitchen)
        + List~String~ getAllKitchens()
    }

    class OrdersManager {
        + Map~String, RestaurantQueueManager~ restaurantManagers
    }

    OrderQueue "1" -- "0..*" OrderItem : contains
    RestaurantQueueManager "1" -- "0..*" OrderQueue : manages
    OrdersManager "1" -- "0..*" RestaurantQueueManager : oversees